--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-is": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.7.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -48,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.21.2"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-router-dom": "^6.21.2",
+    "tailwindcss": "^3.4.1"
   }
 }
